# sarthak-skill-forge

./: +config.js  +config.ts  +data.ts  .cta.json  .drawio  .env  .env (1)  .gitignore  .npmrc  .pnpmrc  .tool-versions  .vercelignore  App.tsx  Dockerfile  MyDurableObject.ts  README.md  WebGPUCanvas.tsx  angular.json  babel.config.js  changelog.md  config.toml  drizzle.config.ts  entry.client.ts  entry.client.tsx  env.ts  eslint.config.js  generate.js  index.html  index.js  index.playright.js  index.puppeteer.js  jest.config.js  js.svelte.config.js  jsconfig.json  metro.config.js  miisingimports  missing_packages.txt  motia.config.ts  next.config.js  next.config.ts  (+35 more)
backends/actix-api/: Cargo.toml
backends/actix-api/src/: app_state.rs  config.rs  errors.rs  lib.rs  main.rs
backends/actix-api/src/config/: server.rs
backends/actix-api/src/db/: mod.rs
backends/actix-api/src/dto/: auth_dto.rs  user_dto.rs
backends/actix-api/src/handlers/: auth_handler.rs  compression_handler.rs  json_responder_handler.rs  response_handler.rs  stream_handler.rs  upload_handler.rs  user_handler.rs  webhook_handler.rs
backends/actix-api/src/middleware/: jwt.rs  logger.rs
backends/actix-api/src/models/: auth.rs  user.rs
backends/actix-api/src/routes/: auth.rs  compression.rs  mod.rs  response.rs  upload.rs  users.rs  webhook.rs
backends/actix-api/src/tests/: integration_tests.rs  mod.rs  state_tests.rs  stream_tests.rs  unit_tests.rs
backends/actix-api/src/utils/: response.rs
backends/django/core/: db.sqlite3  pyproject.toml
backends/django/core/ai_models/: apps.py
backends/django/core/api_tokens/: apps.py
backends/django/core/audit_trails/: apps.py
backends/django/core/background_jobs/: apps.py
backends/django/core/bootstrap_theme/: apps.py
backends/django/core/core/: settings.py
backends/django/core/data_pipeline/: apps.py
backends/django/core/data_privacy/: apps.py
backends/django/core/error_tracking/: apps.py
backends/django/core/health_checks/: apps.py
backends/django/core/health_monitoring/: apps.py
backends/django/core/internal_tools/: apps.py
backends/django/core/logging_service/: apps.py
backends/django/core/notifications_email/: apps.py
backends/django/core/notifications_push/: apps.py
backends/django/core/notifications_sms/: apps.py
backends/django/core/permissions_api/: apps.py
backends/django/core/permissions_app/: apps.py
backends/django/core/pricing_plans/: apps.py
backends/django/core/rate_limit/: apps.py
backends/django/core/rate_limiting/: apps.py
backends/django/core/security_logs/: apps.py
backends/django/core/sessions_manager/: apps.py
backends/django/core/templates/: base.html
backends/django/core/two_factor_auth/: apps.py
backends/django/core/usage_metering/: apps.py
backends/django/core/user_devices/: apps.py
backends/django/core/websocket_handler/: apps.py
(+535 files in other folders)
