[package]
name = "hello-world"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
env_logger = "0.11"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
actix-session = { version = "0.9", features = ["cookie-session"] }

sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros"] }

jsonwebtoken = "9"
argon2 = "0.5"
rocket = { version = "0.5.1", features = ["secrets"] }
rocket = { version = "0.5.1", features = ["json"] }
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }

tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }


