[project]
name = "core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "argcomplete==3.6.3",
    "ariadne>=0.29.0",
    "arrow==1.4.0",
    "asgiref==3.11.1",
    "binaryornot==0.4.4",
    "bottle>=0.13.4",
    "certifi==2026.1.4",
    "chardet==6.0.0.post1",
    "charset-normalizer==3.4.4",
    "cli-venv==0.0.1",
    "click==8.3.1",
    "colorama==0.4.6",
    "cookiecutter==2.6.0",
    "distlib==0.4.0",
    "distro==1.9.0",
    "django==6.0.2",
    "django-bootstrap5==26.2",
    "django-browser-reload==1.21.0",
    "django-tailwind==4.4.2",
    "djangorestframework==3.16.1",
    "djangorestframework-simplejwt==5.5.1",
    "fastapi>=0.134.0",
    "filelock==3.24.3",
    "flask>=3.1.3",
    "graphene>=3.4.3",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.11",
    "jinja2==3.1.6",
    "jiter==0.13.0",
    "langsmith==0.7.6",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "openai==2.21.0",
    "orjson==3.11.7",
    "packaging==26.0",
    "pipx==1.8.0",
    "platformdirs==4.9.2",
    "psycopg2-binary==2.9.11",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pygments==2.19.2",
    "pyjwt==2.11.0",
    "pytailwindcss==0.3.0",
    "python-dateutil==2.9.0.post0",
    "python-discovery==1.1.0",
    "python-slugify==8.0.4",
    "pyyaml==6.0.3",
    "requests==2.32.5",
    "requests-toolbelt==1.0.0",
    "rich==14.3.3",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlparse==0.5.5",
    "streamlit>=1.54.0",
    "text-unidecode==1.3",
    "tqdm==4.67.3",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.3",
    "urllib3==2.6.3",
    "userpath==1.9.2",
    "uuid-utils==0.14.1",
    "uv==0.10.4",
    "uvicorn>=0.41.0",
    "virtualenv==21.0.0",
    "xxhash==3.6.0",
    "zstandard==0.25.0",
]
